<resources>
        <string name="app_name">Movie Trailers</string>
        <string name="watch_trailer">Watch Trailer</string>
        <string name="movie_poster">Movie Poster</string>
        <string name="trailer_type">Trailer Type</string>
        <string name="error_loading_movies">Error loading movies</string>
        <string name="error_loading_trailers">Error loading trailers</string>
        <string name="no_trailers_found">No trailers found for this movie</string>
        <string name="retry">Retry</string>
        <string name="popular_movies">Popular Movies</string>
        <string name="movie_trailers">Movie Trailers</string>
    <string name="tmdb_api_key">42ed2fc006c32959dcf686491a435ea7</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="overview">Overview</string>
    <string name="rating">rating</string>
    <string name="search">search</string>
    <string name="refresh">refresh</string>
    <string name="search_hint">Search for movies…</string>
    <string name="categories">categaries</string>
    <string name="popular">popular</string>
    <string name="top_rated">top rated</string>
    <string name="upcoming">upcoming</string>
    <string-array name="genre_options">
        <item>All</item>
        <item>Drama</item>
        <item>Sci-Fi</item>
        <item>Romance</item>
        <item>Comedy</item>
        <item>Action</item>
        <item>Horror</item>
        <item>Thriller</item>
        <item>Animation</item>
        <item>Adventure</item>
        <item>Mystery</item>
    </string-array>

</resources>