<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_popular"
        android:title="@string/popular"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_top_rated"
        android:title="@string/top_rated"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_upcoming"
        android:title="@string/upcoming"
        app:showAsAction="never" />
</menu>